# fastapi-web-template

./: .editorconfig  .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  gunicorn.conf.py  main.py  manage.py  pyproject.toml
apps/account/: apis.py
apps/account/models/: db.py  request.py  response.py
apps/core/: apis.py
common/: authentication.py  base_pydantic.py  const.py  db.py  enums.py  logger.py  response.py
common/exceptions/: __init__.py  handler.py
common/middleware/: __init__.py
common/utils/: __init__.py
conf/: routers.py  settings.py
migrations/models/: 0_20231208144003_init.py
